--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/slider-animation.css" />
 
     <title>React App</title>
   </head>
