--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/slider-animation.css" />
+    <link rel="stylesheet" href="assets/css/search.css" />
 
     <title>React App</title>
   </head>
